--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Ludum Dare 34</title>
+
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <canvas id="canvas"></canvas>
